# src/gen-ts/src/models/PurchaseOperationTravel.ts
@@ -1,0 +1,134 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Company Management API
+ * API CRUD pour la gestion des entreprises, chantiers, entrepôts, équipements, matériaux, mouvements financiers, dépenses, achats et frais de transport. Basée sur le schéma de base de données fourni.
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime'
+import type { CrupdateWarehouse } from './CrupdateWarehouse'
+import {
+  CrupdateWarehouseFromJSON,
+  CrupdateWarehouseFromJSONTyped,
+  CrupdateWarehouseToJSON,
+  CrupdateWarehouseToJSONTyped,
+} from './CrupdateWarehouse'
+
+/**
+ *
+ * @export
+ * @interface PurchaseOperationTravel
+ */
+export interface PurchaseOperationTravel {
+  /**
+   *
+   * @type {string}
+   * @memberof PurchaseOperationTravel
+   */
+  id?: string
+  /**
+   *
+   * @type {string}
+   * @memberof PurchaseOperationTravel
+   */
+  expense_id?: string
+  /**
+   *
+   * @type {CrupdateWarehouse}
+   * @memberof PurchaseOperationTravel
+   */
+  departure_location?: CrupdateWarehouse
+  /**
+   *
+   * @type {CrupdateWarehouse}
+   * @memberof PurchaseOperationTravel
+   */
+  arrival_location?: CrupdateWarehouse
+  /**
+   *
+   * @type {Date}
+   * @memberof PurchaseOperationTravel
+   */
+  departure_date?: Date
+  /**
+   *
+   * @type {Date}
+   * @memberof PurchaseOperationTravel
+   */
+  arrival_date?: Date
+  /**
+   *
+   * @type {number}
+   * @memberof PurchaseOperationTravel
+   */
+  fee?: number
+}
+
+/**
+ * Check if a given object implements the PurchaseOperationTravel interface.
+ */
+export function instanceOfPurchaseOperationTravel(value: object): value is PurchaseOperationTravel {
+  return true
+}
+
+export function PurchaseOperationTravelFromJSON(json: any): PurchaseOperationTravel {
+  return PurchaseOperationTravelFromJSONTyped(json, false)
+}
+
+export function PurchaseOperationTravelFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): PurchaseOperationTravel {
+  if (json == null) {
+    return json
+  }
+  return {
+    id: json['id'] == null ? undefined : json['id'],
+    expense_id: json['expense_id'] == null ? undefined : json['expense_id'],
+    departure_location:
+      json['departure_location'] == null
+        ? undefined
+        : CrupdateWarehouseFromJSON(json['departure_location']),
+    arrival_location:
+      json['arrival_location'] == null
+        ? undefined
+        : CrupdateWarehouseFromJSON(json['arrival_location']),
+    departure_date: json['departure_date'] == null ? undefined : new Date(json['departure_date']),
+    arrival_date: json['arrival_date'] == null ? undefined : new Date(json['arrival_date']),
+    fee: json['fee'] == null ? undefined : json['fee'],
+  }
+}
+
+export function PurchaseOperationTravelToJSON(json: any): PurchaseOperationTravel {
+  return PurchaseOperationTravelToJSONTyped(json, false)
+}
+
+export function PurchaseOperationTravelToJSONTyped(
+  value?: PurchaseOperationTravel | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value
+  }
+
+  return {
+    id: value['id'],
+    expense_id: value['expense_id'],
+    departure_location: CrupdateWarehouseToJSON(value['departure_location']),
+    arrival_location: CrupdateWarehouseToJSON(value['arrival_location']),
+    departure_date:
+      value['departure_date'] == null
+        ? value['departure_date']
+        : value['departure_date'].toISOString(),
+    arrival_date:
+      value['arrival_date'] == null ? value['arrival_date'] : value['arrival_date'].toISOString(),
+    fee: value['fee'],
+  }
+}
