# src/gen-ts/src/models/TravelOperationTravel.ts
@@ -1,0 +1,134 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Company Management API
+ * API CRUD pour la gestion des entreprises, chantiers, entrepôts, équipements, matériaux, mouvements financiers, dépenses, achats et frais de transport. Basée sur le schéma de base de données fourni.
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime'
+import type { CrupdateWarehouse } from './CrupdateWarehouse'
+import {
+  CrupdateWarehouseFromJSON,
+  CrupdateWarehouseFromJSONTyped,
+  CrupdateWarehouseToJSON,
+  CrupdateWarehouseToJSONTyped,
+} from './CrupdateWarehouse'
+
+/**
+ *
+ * @export
+ * @interface TravelOperationTravel
+ */
+export interface TravelOperationTravel {
+  /**
+   *
+   * @type {string}
+   * @memberof TravelOperationTravel
+   */
+  id?: string
+  /**
+   *
+   * @type {string}
+   * @memberof TravelOperationTravel
+   */
+  expense_id?: string
+  /**
+   *
+   * @type {CrupdateWarehouse}
+   * @memberof TravelOperationTravel
+   */
+  departure_location?: CrupdateWarehouse
+  /**
+   *
+   * @type {CrupdateWarehouse}
+   * @memberof TravelOperationTravel
+   */
+  arrival_location?: CrupdateWarehouse
+  /**
+   *
+   * @type {Date}
+   * @memberof TravelOperationTravel
+   */
+  departure_date?: Date
+  /**
+   *
+   * @type {Date}
+   * @memberof TravelOperationTravel
+   */
+  arrival_date?: Date
+  /**
+   *
+   * @type {number}
+   * @memberof TravelOperationTravel
+   */
+  fee?: number
+}
+
+/**
+ * Check if a given object implements the TravelOperationTravel interface.
+ */
+export function instanceOfTravelOperationTravel(value: object): value is TravelOperationTravel {
+  return true
+}
+
+export function TravelOperationTravelFromJSON(json: any): TravelOperationTravel {
+  return TravelOperationTravelFromJSONTyped(json, false)
+}
+
+export function TravelOperationTravelFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean,
+): TravelOperationTravel {
+  if (json == null) {
+    return json
+  }
+  return {
+    id: json['id'] == null ? undefined : json['id'],
+    expense_id: json['expense_id'] == null ? undefined : json['expense_id'],
+    departure_location:
+      json['departure_location'] == null
+        ? undefined
+        : CrupdateWarehouseFromJSON(json['departure_location']),
+    arrival_location:
+      json['arrival_location'] == null
+        ? undefined
+        : CrupdateWarehouseFromJSON(json['arrival_location']),
+    departure_date: json['departure_date'] == null ? undefined : new Date(json['departure_date']),
+    arrival_date: json['arrival_date'] == null ? undefined : new Date(json['arrival_date']),
+    fee: json['fee'] == null ? undefined : json['fee'],
+  }
+}
+
+export function TravelOperationTravelToJSON(json: any): TravelOperationTravel {
+  return TravelOperationTravelToJSONTyped(json, false)
+}
+
+export function TravelOperationTravelToJSONTyped(
+  value?: TravelOperationTravel | null,
+  ignoreDiscriminator: boolean = false,
+): any {
+  if (value == null) {
+    return value
+  }
+
+  return {
+    id: value['id'],
+    expense_id: value['expense_id'],
+    departure_location: CrupdateWarehouseToJSON(value['departure_location']),
+    arrival_location: CrupdateWarehouseToJSON(value['arrival_location']),
+    departure_date:
+      value['departure_date'] == null
+        ? value['departure_date']
+        : value['departure_date'].toISOString(),
+    arrival_date:
+      value['arrival_date'] == null ? value['arrival_date'] : value['arrival_date'].toISOString(),
+    fee: value['fee'],
+  }
+}
